# CORAL

./: .gitignore  AGENTS.md  AGENT_BRIEFING.md  CLAUDE.md  README.md  README_CN.md  TASK5_BRIEF.md  Task5.md  Task6.md  pyproject.toml
assignment/: README.md
coral/: _version.py  config.py
coral/agent/: heartbeat.py  manager.py  registry.py
coral/agent/builtin/: __init__.py  opencode.py  pi_agent.py
coral/cli/: __init__.py  author.py  heartbeat.py  start.py
coral/gateway/: middleware.py  server.py
coral/hooks/: post_commit.py
coral/hub/: attempts.py  checkpoint.py  heartbeat.py  knowledge_graph.py  steering.py
coral/web/: api.py  app.py
coral/web/static/: index.html
coral/workspace/: grader_env.py  project.py  worktree.py
examples/: README.md
examples/circle_packing/: task_claude.yaml
examples/frontier_eng/: README.md
examples/frontier_eng/WirelessChannelSimulation/HighReliableSimulation/grader/: pyproject.toml
examples/frontier_eng/_grader/: README.md
examples/frontier_eng/_scripts/: generate_tasks.py
examples/tsp/: litellm_config.yaml  task.yaml
examples/tsp/grader/: pyproject.toml
examples/tsp/grader/src/tsp_grader/: grader.py
examples/tsp/seed/: opencode.json  solution.py
examples/tsp_pr1002/: task.yaml
examples/tsp_pr1002/grader/: pyproject.toml
examples/tsp_pr1002/grader/src/tsp_pr1002_grader/: grader.py
examples/tsp_pr1002/seed/: solution.py
tests/: test_cli_island_scope.py  test_grader.py  test_heartbeat.py  test_pi_runtime.py  test_steering.py  test_web_dag.py
web/src/lib/: api.ts
web/src/pages/: Dag.tsx
(+193 files in other folders)
