[project]
name = "tsp-pr1002-grader"
version = "0.1.0"
description = "CORAL grader for the TSP pr1002 task."
requires-python = ">=3.11"
dependencies = ["coral"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsp_pr1002_grader"]
