[project]
name = "frontier-eng-grader"
version = "0.1.0"
description = "Generic CORAL grader for Frontier-Engineering benchmarks (https://github.com/EinsiaLab/Frontier-Engineering)."
requires-python = ">=3.11"
dependencies = [
    "coral",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frontier_eng_grader"]
